// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test making the accordion control invisible 1`] = `
<Wrapper
  bottom=""
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id="1234"
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Accordion"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={false}
  width=""
  xcss={null}
>
  <styled.ul
    className="ui-accordion test-class"
    sizing="normal"
    style={Object {}}
  >
    <li
      disabled={false}
      key=".0"
      sizing="normal"
    >
      some list item
    </li>
  </styled.ul>
</Wrapper>
`;

exports[`Test retrieval of Accordion props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "id": "",
  "left": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "obj": "Accordion",
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the creation of a Accordion control container 1`] = `
<Wrapper
  bottom=""
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id="1234"
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Accordion"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.ul
    className="ui-accordion test-class"
    sizing="normal"
    style={Object {}}
  >
    <li
      disabled={false}
      key=".0"
      sizing="normal"
    >
      some list item
    </li>
  </styled.ul>
</Wrapper>
`;

exports[`Test the disabling of the Accordion control container 1`] = `
<Wrapper
  bottom=""
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id="1234"
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Accordion"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.ul
    className="ui-accordion test-class"
    sizing="normal"
    style={Object {}}
  >
    <li
      disabled={true}
      key=".0"
      sizing="normal"
    >
      some list item
    </li>
  </styled.ul>
</Wrapper>
`;
